bugfix/modal-z-index
для бэкдропа z-индекс добавлен 100

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -9,7 +9,7 @@
   background-color: rgba(168, 118, 118, 0.2);
   opacity: 1;
   overflow: hidden;
-  z-index: 1;
+  z-index: 100;
 
   &__is-hidden {
     opacity: 0;
